crates/solidity-v2/testing/snapshots/diagnostics_output/resolution/incompatible_built_in_version/event_selector/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: This built-in was introduced in version '0.8.15'.
   ╭─[input.sol:8:24]
   │
 8 │         return MyEvent.selector;
   │                        ────┬───  
   │                            ╰───── Error occurred here.
───╯
